[package]
name = "rp_helper_mockup"
version = "0.0.1"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "fs", "sync"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors", "limit"] }
libloading = "0.8"
once_cell = "1"

[profile.release]
opt-level = 3
lto = true
strip = true
